# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-client-2.2.6 (14 Jan 2011)

  14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.6.ebuild:
  Bump version

*calculate-client-2.2.5 (30 Dec 2010)

  30 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.5.ebuild:
  Bump version.

*calculate-client-2.2.4 (23 Dec 2010)

  23 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.1.ebuild, -calculate-client-2.2.4_rc2.ebuild,
  +calculate-client-2.2.4.ebuild:
  Bump version. Remove old.

*calculate-client-2.2.4_rc2 (22 Dec 2010)

  22 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.4_rc1.ebuild, +calculate-client-2.2.4_rc2.ebuild:
  Bump version.

*calculate-client-2.2.4_rc1 (22 Dec 2010)

  22 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.4_rc1.ebuild:
  Version bump.

*calculate-client-2.2.3 (17 Dec 2010)

  17 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -files/calculate-client-2.1.17-r1.patch,
  -files/calculate-client-2.1.17-r2.patch,
  -files/calculate-client-2.1.18-r1.patch, -calculate-client-2.2.0.0.ebuild,
  -files/client_i18n_path.patch, -calculate-client-2.2.1_rc17.ebuild,
  -calculate-client-2.2.2.ebuild, +calculate-client-2.2.3.ebuild:
  Bump version. Remove needless patches.

*calculate-client-2.2.2 (15 Dec 2010)

  15 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.2.ebuild:
  Bump version.

*calculate-client-2.2.1 (09 Dec 2010)

  09 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.2.1.ebuild:
  Bump version.

*calculate-client-2.2.1_rc17 (09 Dec 2010)

  09 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.2.1_rc16.ebuild, +calculate-client-2.2.1_rc17.ebuild:
  Daily update.

*calculate-client-2.2.1_rc16 (08 Dec 2010)
