@@ -5,7 +5,8 @@ DIST calculate-client-2.2.6.tar.bz2 35139 RMD160 f25439381e1851cbf47299a8b1e838e
 EBUILD calculate-client-2.2.3.ebuild 1737 RMD160 0d6b07c5cde6a8851551bd031261375831895b45 SHA1 b3291d35c5a8562f75caab2215d7bb3790545e38 SHA256 c3b95b43c58960adf89882f9de60b64c8594d888d9d8e36c61244d6ec89c9e97
 EBUILD calculate-client-2.2.4.ebuild 1737 RMD160 2fad6b95f95d4bd57a9e2bb99d08ba64f8653a06 SHA1 18f22e4a81ecee0ee05d87addc0ee033bc43dd02 SHA256 f9ebd2d9a32c4fce4b10ed6cf22614495c65456692e00cd3905765d9d076a8ee
 EBUILD calculate-client-2.2.5.ebuild 1737 RMD160 20aa37d9a3881f8c6dfd089e5751d2103b3ca953 SHA1 314b96621f5d756cc31104bcc033f7ae735bd50a SHA256 acd9c843dd57bb461620f57728b64e49c77d87b18e3cb59d79947fd33ebfac6d
+EBUILD calculate-client-2.2.6-r1.ebuild 1715 RMD160 1ccf0c7e4ce2cc5dfae6e0540540cd8cbb66d36d SHA1 b94ad781252411b1687c3ff75b4e8f30e440e3f8 SHA256 31d1c191a4b993f4ad4c2dfcb079323ebace5dc95fbd6721fb6a1d512818588b
 EBUILD calculate-client-2.2.6.ebuild 1737 RMD160 03baa551f9d658d825f119bc8a33844490b662e9 SHA1 37adee98d4cee297cb96e299faca7be9e8fc7ff5 SHA256 21be45061fff03d364ddb148fb649181d7540ae85d0a84201ddf2eb5e1951251
 EBUILD calculate-client-2.2.9999.ebuild 1718 RMD160 f88304830d176bde5e48389c59664fd4f810a1f3 SHA1 d4c1a942e988304a2b5dee4842932e6b360a9f65 SHA256 86a88789729dd8c68d662d62c61dbe13cfeca74a6b1e6f1c878f6cb67f60dc41
-MISC ChangeLog 14746 RMD160 09c9ea2c48a50c425f2985a8e158732dfa6cffb0 SHA1 902c750efed683fb17a4694e16a41d13b06e6a6b SHA256 322bf76ebaa72a79325a224d0e9b7031fb48621ed27412d41f1544a3b8762d78
+MISC ChangeLog 14913 RMD160 405926db9fd3e886c142b70f55276d5248764798 SHA1 a9c5343fe463ad4da004eecd6dd27e33dff7e739 SHA256 bccab6494d06454cf18e3ef76b60838005a6e81e9535d7199c5131ae4139db7d
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
