@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.2.6-r1 (17 Jan 2011)
+
+  17 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.2.6-r1.ebuild:
+  Remove dep sys-apps/hal.
+
 *calculate-client-2.2.6 (14 Jan 2011)
 
   14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
